Table: Fix selection border of first row when header is invisible

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.css
@@ -29,6 +29,10 @@
     }
   }
 
+  &:not(:focus):not(.focused).header-invisible > .table-data > .table-row.selected.first {
+    border-top-color: transparent;
+  }
+
   & > .menubar {
     &:not(.main-menubar) {
       padding-left: @table-cell-padding-left;
